# wezterm-ssh-test

./: Cargo.toml
src/: main.rs
