[package]
name = "wezterm-ssh-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2.1"
log = "0.4.17"
tokio = { version = "1.20.1", features = ["full"] }
simple_logger = "2.3.0"
smol = "1.2.5"
wezterm-ssh = "0.4"
